src/main/java/com/example/property_management/error/exception/PropertyAlreadyExistsException.java
package com.example.property_management.error.exception;

public class PropertyAlreadyExistsException extends RuntimeException {
    public PropertyAlreadyExistsException(String message) {
        super(message);
    }
}
